fixed a spacing bug on the results page that occurs because of longer translations

--- a/public/stylesheets/widget/sass/screen.sass
+++ b/public/stylesheets/widget/sass/screen.sass
@@ -124,7 +124,7 @@ table
     td.idea
       width: 67.5%
     td.score_header
-      width: 55px
+      width: 80px
   .row1
     background-color: #fafafa
   .row2
